cmake_minimum_required(VERSION 3.27)

add_subdirectory(01-multipleSum)
add_subdirectory(02-sumOfNaturalNumber)
add_subdirectory(03-proper-divisor)
add_subdirectory(04-age-difference)
add_subdirectory(05-age-difference-string-control)
add_subdirectory(06-number-extraction)
add_subdirectory(07-word-restoration)
add_subdirectory(08-right-parentheses)
add_subdirectory(09-common-divisor)
add_subdirectory(10-sumOfDigits)
add_subdirectory(11-numberOfTotal)
add_subdirectory(12-numberOfTotalLimit1Sec)